--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: "Spartan", sans-serif;
+  font-family: "Open Sans", sans-serif;;
   list-style: none;
   text-decoration: none;
 }
@@ -64,10 +64,12 @@ body {
 section {
   padding: 5% 10%;
 }
+
+/*Hero Sesction*/
 .main-home {
   width: 100%;
   height: 100vh;
-  background-image: url(/Images/homegem.jpg);
+  background-image: url(/Web_Application_Final-_Project_Group-R/Images/homegem.jpg);
   background-position: center;
   background-size: cover;
   display: grid;
@@ -113,13 +115,14 @@ section {
   padding-bottom: 30px;
 }
 .gemstone-container {
-  width: 1203px;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1px;
   background-color: #ede8e8;
 }
 .gemstone-item {
+  width: 100%;
   text-align: center;
 }
 .gemstone-item p {
@@ -134,7 +137,140 @@ section {
 
 .gemstone-item p {
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 500;
   margin-top: 30px;
-  font-family: "Lucida Sans", "Lucida Sans Regular";
+  font-style: normal;
 }
+
+/*Review Section CSS*/
+.section4{
+  background-color: black;
+}
+.heading{
+  text-align: center;
+  color:rgb(255, 255, 255);
+  text-transform: uppercase;
+  padding-bottom: 1.5rem;
+  font-size: 2.5rem;
+}
+
+.heading span{
+  color:rgb(187, 187, 181);
+  text-transform: uppercase;
+}
+.review .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  gap:1.5rem;
+  color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0);
+}
+
+.review .box-container .box{
+  border:var(--border);
+  text-align: center;
+  padding:3rem 1rem;
+  border: 2px solid rgb(200, 200, 200);
+}
+
+.review .box-container .box p{
+  font-size: 1rem;
+  line-height: 1.8;
+  color: rgb(255, 255, 255);
+  padding:1rem 0;
+
+}
+
+.review .box-container .box .user{
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 1rem;
+}
+
+.review .box-container .box h3{
+  padding:8px;
+  font-size: 1.2rem;
+  color:rgb(255, 255, 255);
+  text-transform: uppercase;
+}
+.review .box-container .box .stars i{
+  font-size: 1rem;
+  color:white;
+}
+/*5th Section CSS*/
+.section5{
+  background-color: chartreuse;
+}
+
+/*Footer Section CSS*/
+footer{
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 50px 70px;
+}
+footer .row{
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 2fr;
+  grid-gap: 20px;
+}
+.footer-col h2{
+  position: relative;
+  color: gray;
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 15px;
+  text-transform:uppercase;
+}
+.footer-col p{
+  color:gray;
+}
+.footer-col h2::before{
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 50px;
+  height: 2px;
+  background:red;
+  opacity: 60%;
+}
+
+.footer-col li a{
+  line-height: 2;
+  color: gray;
+}
+.footer-col hr{
+  opacity: 30%;
+}
+
+.gia-img{
+  text-align: justify;
+}
+.gia-img img{
+  width: 100%;
+  height: auto;
+  background-color: white;
+}
+.img-rows{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+.copyright-text{
+  padding: 10px;
+  background-color: rgb(132, 132, 132);
+  color: white;
+  font-family: cursive;
+  text-align: center;
+}
+
+
+
+
+
+
+
+
