--- a/css/subpages.css
+++ b/css/subpages.css
@@ -11,51 +11,53 @@ body {
   margin: 0px;
 }
 
-/* About Us Page CSS*/
+/*Common CSS S*/
 .abodetails {
-  margin: 200px 100px 0;
+  margin: 150px 100px 0;
   padding: 10px;
-  text-align: center;
   align-content: center;
 }
 .abodetails h2 {
   font-size: 50px;
+  font-weight: 600;
+  text-align: center;
   text-transform: uppercase;
 }
 .abodetails h3 {
+  margin-top: 1em;
   font-size: 20px;
   text-transform: uppercase;
+  text-align: center;
 }
 .abodetails p {
   font-size: 18px;
   text-align: center;
   line-height: 1.5;
 }
+/* About Us Page CSS*/
 .aboimg img {
   width: 300px;
   border: 1px solid;
 }
 
 /* Contact Us Page CSS*/
-#titles,#country {
+#titles,
+#country {
   height: 40px;
   width: 200px;
   font-size: 16px;
   padding: 0 5px;
   border-radius: 5px;
   border: 1px solid #ccc;
-  
 }
 .form-container {
   align-content: center;
-  
 }
 .user-details {
   justify-content: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding: 20px 200px;
-  
+  padding: 0 100px;
 }
 .grid-item {
   padding: 1em 3em;
@@ -80,25 +82,26 @@ body {
   font-size: 16px;
   font-weight: 600;
 }
+
 .opt {
   font-size: 1em;
   line-height: 1.5;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 0.5em;
 }
-.checkmark{
+.checkmark {
   position: absolute;
   top: 0;
   left: 0;
   height: 30px;
   width: 30px;
-  background-color: #894141;
 }
 
 .form-container form .user-details {
   justify-content: flex-start;
   margin: 20px 0 12px 0;
 }
+
 form .user-details .input-box {
   margin-bottom: 15px;
 }
@@ -118,29 +121,136 @@ form .user-details .input-box {
   border: 1px solid #ccc;
   padding-left: 15px;
   font-size: 16px;
-  border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
-.user-details .input-box input:focus,
-.user-details .input-box input:valid {
-  border-color: black;
+.user-details .input-box input:focus {
+  border-color: #66abde;
+  box-shadow: 2px 2px 10px rgb(151, 192, 239);
+}
+.user-details .input-box select:focus {
+  outline: 1px solid;
+  outline-color: #66abde;
+  box-shadow: 2px 2px 10px rgb(151, 192, 239);
+}
+.user-details .input-box textarea:focus {
+  border-color: #66abde;
+  box-shadow: 2px 2px 10px rgb(151, 192, 239);
 }
 .message {
+  outline: none;
   width: 100%;
   height: 20vh;
   border-radius: 5px;
   padding: 15px;
   border: 1px solid #ccc;
-  border-bottom-width: 2px;
 }
-.btn-container{
+.btn-container {
+  margin-left: 50px;
 }
 .submit-btn {
-  width: 100px;
-  height: 40px;
+  width: 130px;
+  height: 45px;
   font-size: 1em;
   font-weight: 400;
   background-color: #0c64e9;
   border-radius: 10px;
   color: white;
+  border: none;
+  cursor: pointer;
+}
+.submit-btn:hover {
+  background-color: white;
+  border: 1px solid #0c64e9;
+  color: #0c64e9;
+}
+
+/* Event Page */
+.event-container {
+  margin: 140px 180px 0;
+}
+.event-container .event-title {
+  text-align: center;
+  font-size: 1rem;
+}
+.event-container .event-post {
+  border: 1px solid #ccc;
+  padding: 40px;
+}
+.event-container .event-post h3 {
+  font-size: 2rem;
+}
+.event-container .event-post h4 {
+  font-size: 1rem;
+  font-weight: 500;
+  color: rgb(125, 125, 125);
+}
+
+.event-post .event-img img {
+  width: 60%;
+  height: auto;
+}
+.img3 {
+  width: 120%;
+}
+.event-container .event-post p {
+  font-size: 1.1em;
+}
+.event-container .event-post span {
+  font-style: italic;
+}
+.event-container .event-post a {
+  font-size: 1rem;
+  text-decoration: underline;
+  text-transform: capitalize;
+}
+.event-container .event-post .read-more {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+.read-more:hover {
+  color: white;
+  background-color: black;
+  cursor: pointer;
+}
+
+/* Information Page */
+.info-container {
+  margin: 100px 100px 0;
+  padding: 50px;
+}
+.info-container .information {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 20px;
+}
+.info-container hr {
+  height: 3px;
+  background-color: #6a6a6a;
+  opacity: 50%;
+}
+.sec1,
+.sec2,
+.sec3,
+.sec4 {
+}
+.info-container .information .inf-img {
+  text-align: center;
+}
+.info-container .information img {
+  width: 50%;
+  margin-block: 100px;
+}
+.info-container .information .inf-list h2 {
+  font-size: 2rem;
+  font-weight: 900;
+}
+.info-container .information .inf-list h3 {
+  font-size: 1.4rem;
+  font-weight: 900;
+}
+.info-container .information .inf-list li {
+  list-style-image: url("/Images/red-symbol.png");
+  margin-block: 2rem;
+  font-size: 1.1rem;
 }
